Fix calc() layout issue on mobile

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -2520,6 +2520,7 @@ ul.crumbs {
 
     .primary {
       order: 2;
+      max-width: 100%;
 
       .box {
         padding: 15px 0;
